--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,13 @@
 RewriteEngine on
 
-RewriteRule ^Login login.php [NE,L]
+RewriteRule ^Login index.php [NE,L]
 RewriteRule ^Signup signup.php [NE,L]
 RewriteRule ^Logout logout.php [NE,L]
 RewriteRule ^Profile profile.php [NE,L]
 RewriteRule ^Dashboard dashboard.php [NE,L]
 RewriteRule ^Sub-Category sub_category.php [NE,L]
 RewriteRule ^Certificates certificates.php [NE,L]
+RewriteRule ^Brands brands.php [NE,L]
 
 RewriteRule ^Insert insert.php [NE,L]
 RewriteRule ^Update update.php [NE,L]
