--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,7 @@ RewriteRule ^Sub-Category sub_category.php [NE,L]
 RewriteRule ^Certificates certificates.php [NE,L]
 RewriteRule ^Brands brands.php [NE,L]
 RewriteRule ^Category design_cat.php [NE,L]
+RewriteRule ^Design-Idea design_idea.php [NE,L]
 
 RewriteRule ^Insert insert.php [NE,L]
 RewriteRule ^Update update.php [NE,L]
